Change Scrap Approval Method
